[package]
authors     = { workspace = true }
categories  = ["development-tools"]
description = "OCR tool plugin for bcode"
edition     = { workspace = true }
keywords    = ["bcode", "ocr", "tesseract", "tool", "plugin"]
license     = { workspace = true }
name        = "bcode_ocr_plugin"
readme      = { workspace = true }
repository  = { workspace = true }
version     = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bcode_model_provider_runtime = { workspace = true }
bcode_plugin_sdk             = { workspace = true }
bcode_tesseract_ocr          = { workspace = true, optional = true }
bcode_tool                   = { workspace = true }
image                        = { workspace = true, optional = true }
reqwest                      = { workspace = true }
serde                        = { workspace = true, features = ["derive", "std"] }
serde_json                   = { workspace = true }
thiserror                    = { workspace = true }
tokio                        = { workspace = true, features = ["fs", "io-util", "process", "time"] }

[features]
_bundled-tesseract-runtime = ["dep:bcode_tesseract_ocr", "dep:image"]
bundled-tesseract = ["bundled-tesseract-default"]
bundled-tesseract-all = ["bundled-tesseract-v5-3-4", "bundled-tesseract-v5-5-1"]
bundled-tesseract-default = ["bundled-tesseract-v5-5-1"]
bundled-tesseract-latest = ["bundled-tesseract-v5-5-1"]
bundled-tesseract-v5-3-4 = [
    "_bundled-tesseract-runtime",
    "bcode_tesseract_ocr/bundled-tesseract-v5-3-4",
]
bundled-tesseract-v5-5-1 = [
    "_bundled-tesseract-runtime",
    "bcode_tesseract_ocr/bundled-tesseract-v5-5-1",
]
default = []
external-tesseract-cli = []
fail-on-warnings = []
static-bundled = []
system-tesseract = [
    "dep:bcode_tesseract_ocr",
    "dep:image",
    "bcode_tesseract_ocr/system-tesseract",
]
