[package]
authors     = { workspace = true }
categories  = ["development-tools"]
description = "OpenAI-compatible model provider plugin for bcode"
edition     = { workspace = true }
keywords    = ["bcode", "model", "openai", "provider"]
license     = { workspace = true }
name        = "bcode_openai_compatible_provider_plugin"
readme      = { workspace = true }
repository  = { workspace = true }
version     = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
base64 = { workspace = true }
bcode_config = { workspace = true }
bcode_model = { workspace = true }
bcode_model_provider_runtime = { workspace = true }
bcode_plugin_sdk = { workspace = true }
bcode_provider_auth = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true, features = ["derive", "std"] }
serde_json = { workspace = true }
sshenv_vault = { workspace = true }
tokio = { workspace = true, features = [
    "io-util",
    "macros",
    "rt",
    "sync",
    "time",
] }
zeroize = { workspace = true }

[features]
default          = []
fail-on-warnings = []
static-bundled   = []
