[package]
authors     = { workspace = true }
categories  = ["development-tools"]
description = "interactive question tool plugin for bcode"
edition     = { workspace = true }
keywords    = ["bcode", "question", "tool", "plugin"]
license     = { workspace = true }
name        = "bcode_question_plugin"
readme      = { workspace = true }
repository  = { workspace = true }
version     = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bcode_plugin_sdk            = { workspace = true }
bcode_tool                  = { workspace = true }
bmux_tui_component_protocol = { workspace = true, features = ["serde"] }
bmux_tui_components         = { workspace = true, features = ["protocol"] }
serde                       = { workspace = true }
serde_json                  = { workspace = true }

[features]
default          = []
fail-on-warnings = []
static-bundled   = []
