[package]
authors     = { workspace = true }
categories  = ["development-tools"]
description = "Bundled shell execution tool plugin for bcode"
edition     = { workspace = true }
keywords    = ["bcode", "shell", "tool", "plugin"]
license     = { workspace = true }
name        = "bcode_shell_plugin"
readme      = { workspace = true }
repository  = { workspace = true }
version     = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bcode_plugin_sdk   = { workspace = true }
bcode_tool         = { workspace = true }
bcode_tool_runtime = { workspace = true }
portable-pty       = { workspace = true }
serde              = { workspace = true, features = ["derive", "std"] }
serde_json         = { workspace = true }
tokio              = { workspace = true, features = ["rt"] }

[features]
default          = []
fail-on-warnings = []
static-bundled   = []
