[package]
authors     = { workspace = true }
categories  = ["development-tools"]
description = "shell execution tool plugin for bcode"
edition     = { workspace = true }
keywords    = ["bcode", "shell", "tool", "plugin"]
license     = { workspace = true }
name        = "bcode_shell_plugin"
readme      = { workspace = true }
repository  = { workspace = true }
version     = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bcode_config         = { workspace = true }
bcode_plugin_sdk     = { workspace = true }
bcode_tool           = { workspace = true }
bcode_tool_runtime   = { workspace = true }
bcode_tui_components = { workspace = true, optional = true }
bmux_tui             = { workspace = true, optional = true }
portable-pty         = { workspace = true }
serde                = { workspace = true, features = ["derive", "std"] }
serde_json           = { workspace = true }
shuck-formatter      = { workspace = true, optional = true }
tokio                = { workspace = true, features = ["rt"] }
url                  = { workspace = true }
vte                  = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[features]
default          = []
fail-on-warnings = []
static-bundled   = ["bcode_tui_components", "bmux_tui", "shuck-formatter"]
