[package]
authors     = { workspace = true }
categories  = ["development-tools"]
description = "skills command palette plugin for bcode"
edition     = { workspace = true }
keywords    = ["bcode", "skills", "command", "plugin"]
license     = { workspace = true }
name        = "bcode_skills_plugin"
readme      = { workspace = true }
repository  = { workspace = true }
version     = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bcode_command      = { workspace = true }
bcode_config       = { workspace = true }
bcode_plugin_sdk   = { workspace = true }
bcode_skill        = { workspace = true }
bcode_skill_models = { workspace = true }
bmux_keyboard      = { workspace = true }
bmux_tui           = { workspace = true }
serde              = { workspace = true }
serde_json         = { workspace = true }

[features]
default          = []
fail-on-warnings = []
static-bundled   = []
