[package]
authors     = { workspace = true }
categories  = ["development-tools"]
description = "skills command palette plugin for bcode"
edition     = { workspace = true }
keywords    = ["bcode", "skills", "command", "plugin"]
license     = { workspace = true }
name        = "bcode_skills_plugin"
readme      = { workspace = true }
repository  = { workspace = true }
version     = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bcode_client         = { workspace = true }
bcode_command        = { workspace = true }
bcode_config         = { workspace = true }
bcode_plugin_sdk     = { workspace = true, features = ["tui"] }
bcode_session_models = { workspace = true }
bcode_settings       = { workspace = true }
bcode_skill          = { workspace = true }
bcode_skill_models   = { workspace = true }
bmux_keyboard        = { workspace = true }
bmux_tui             = { workspace = true }
clap                 = { workspace = true, features = ["derive", "std"] }
serde                = { workspace = true }
serde_json           = { workspace = true }
thiserror            = { workspace = true }

[features]
default          = []
fail-on-warnings = []
static-bundled   = []
