[package]
authors     = { workspace = true }
categories  = ["development-tools"]
description = "Vim/Neovim edit tool plugin for bcode"
edition     = { workspace = true }
keywords    = ["bcode", "neovim", "vim", "plugin"]
license     = { workspace = true }
name        = "bcode_vim_edit_plugin"
readme      = { workspace = true }
repository  = { workspace = true }
version     = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bcode_plugin_sdk = { workspace = true, features = ["tui"] }
bcode_tool       = { workspace = true }
bcode_vim_edit   = { workspace = true }
serde            = { workspace = true, features = ["derive", "std"] }
serde_json       = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[features]
default          = []
fail-on-warnings = []
static-bundled   = ["bmux_tui"]

[dependencies.bmux_tui]
optional  = true
workspace = true
