[package]
authors     = { workspace = true }
categories  = ["development-tools"]
description = "web search and fetch tool plugin for bcode"
edition     = { workspace = true }
keywords    = ["bcode", "web", "search", "tool", "plugin"]
license     = { workspace = true }
name        = "bcode_web_search_plugin"
readme      = { workspace = true }
repository  = { workspace = true }
version     = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bcode_model_provider_runtime = { workspace = true }
bcode_plugin_sdk             = { workspace = true, features = ["tui"] }
bcode_tool                   = { workspace = true }
bcode_tui_components         = { workspace = true, optional = true }
bmux_tui                     = { workspace = true, optional = true }
reqwest                      = { workspace = true }
serde                        = { workspace = true, features = ["derive", "std"] }
serde_json                   = { workspace = true }
thiserror                    = { workspace = true }
tokio                        = { workspace = true, features = ["macros", "time"] }

[features]
default          = []
fail-on-warnings = []
static-bundled   = ["bcode_tui_components", "bmux_tui"]
