[package]
authors     = { workspace = true }
categories  = ["development-tools"]
description = "Bundled Git worktree tool plugin for bcode"
edition     = { workspace = true }
keywords    = ["bcode", "worktree", "git", "tool", "plugin"]
license     = { workspace = true }
name        = "bcode_worktree_plugin"
readme      = { workspace = true }
repository  = { workspace = true }
version     = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bcode_command         = { workspace = true }
bcode_config          = { workspace = true }
bcode_plugin_sdk      = { workspace = true }
bcode_session_models  = { workspace = true }
bcode_tool            = { workspace = true }
bcode_worktree        = { workspace = true }
bcode_worktree_models = { workspace = true }
bmux_keyboard         = { workspace = true }
bmux_tui              = { workspace = true }
serde                 = { workspace = true, features = ["derive", "std"] }
serde_json            = { workspace = true }

[features]
default          = []
fail-on-warnings = []
static-bundled   = []
